--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MoonTV",
-  "short_name": "MoonTV",
+  "name": "GaoTV",
+  "short_name": "GaoTV",
   "description": "影视聚合",
   "start_url": "/",
   "scope": "/",
